--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.8"
 
 services:
   zookeeper:
@@ -29,7 +29,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
-      MYSQL_USER: 'vaxidrez'
+      MYSQL_USER: 'lbvargas'
       MYSQL_PASSWORD: 'Devluisvargas1$$'
       MYSQL_ROOT_PASSWORD: 'Devluisvargas1$$'
     ports:
@@ -42,10 +42,10 @@ services:
     image: mongo
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: "luisvargas"
+      MONGO_INITDB_ROOT_USERNAME: "lbvargas"
       MONGO_INITDB_ROOT_PASSWORD: "Devluisvargas1$$"
     ports:
-      - 27017:27017
+      - "27017:27017"
     volumes:
       - mongodb_data:/data/db
 volumes:
