--- a/ms-comp-banking-command/pom.xml
+++ b/ms-comp-banking-command/pom.xml
@@ -45,6 +45,17 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.devluis.banking.cqrs</groupId>
+            <artifactId>cqrs-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.devluis.banking.account</groupId>
+            <artifactId>ms-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
