--- a/ms-comp-banking-command/src/main/resources/application.yml
+++ b/ms-comp-banking-command/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
       host: localhost
       port: 27017
       database: bankingAccount
+      username: lbvargas
+      password: Devluisvargas1$
+      authentication-database: admin
   kafka:
     producer:
       bootstrap-servers: localhost:9092
